Changes made in bg Added background-size: cover; to ensure the background image covers the entire screen, maintaining its aspect ratio. Added background-repeat: no-repeat; to prevent the image from repeating itself if it's smaller than the screen size. Added background-position: center; to center the image both horizontally and vertically. Changed height: 100%; to height: 100vh; to set the height of the #bg element to 100% of the viewport height. Added width: 100vw; to set the width of the #bg element to 100% of the viewport width.

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -209,12 +209,15 @@
 		/* Set your background with this */
 		background: _misc(bg);
 
+		background-size: cover;
 		background-repeat: repeat-x;
-		height: 100%;
+		background-position: center;
+		height: 100vw;
 		left: 0;
 		opacity: 1;
 		position: fixed;
 		top: 0;
+		width: 100vw;
 	}
 
 	@include bg(_misc(bg-width) * 1.5);
